apps/rbnis/deployment.canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbnis-canary
  namespace: rbnis
  labels:
    app.kubernetes.io/name: rbnis
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rbnis
      track: canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rbnis
        track: canary
    spec:
      automountServiceAccountToken: false
      containers:
        - name: rbnis
          image: ghcr.io/rbnis/rbn.is:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 5Mi
            limits:
              cpu: 150m
              memory: 20Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            fsGroup: 101
      tolerations:
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
