apps/rbnis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbnis
  labels:
    app.kubernetes.io/name: rbnis
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: rbnis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rbnis
    spec:
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: rbnis
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      automountServiceAccountToken: false
      containers:
        - name: rbnis
          image: ghcr.io/rbnis/rbn.is:2.10.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 20Mi
            limits:
              memory: 20Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            fsGroup: 101
      tolerations: []
