apps/rbnis/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rbnis
  namespace: rbnis
spec:
  selector:
    app.kubernetes.io/name: rbnis
  ports:
    - name: http
      port: 80
      targetPort: http
