apps/rbnis/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rbnis
  namespace: rbnis
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - ./rbn.is
        - ./*.rbn.is
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - ./rbn.is
        - ./*.rbn.is
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cert-rbnis
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rbnis
  namespace: rbnis
spec:
  hosts:
    - "rbn.is"
    - "*.rbn.is"
  gateways:
    - rbnis
  http:
    - name: wildcard-redirect
      match:
        - authority:
            regex: ".*.rbn.is"
      redirect:
        authority: "rbn.is"
        redirectCode: 302
    - name: rbnis-stable
      route:
        - destination:
            host: rbnis.rbnis.svc.cluster.local
            subset: stable
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rbnis
  namespace: rbnis
spec:
  host: rbnis
  subsets:
  - name: stable
    labels:
      track: stable
